--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <a href="project1.html">Project 1 - Anna</a><br>
     <a href="project1.1.html">Project 1.1 - My Profile</a><br>
+    <a href="project2.html">Project 2 - Jeff's Blog</a><br>
 </body>
 
 </html>
