--- a/project2.html
+++ b/project2.html
@@ -66,7 +66,7 @@
 
 <body>
     <header>
-        <img src="/assets/jeff.png">
+        <img src="/assets/jeff.png" alt="profile photo of Jeff">
         <h1>Jeff's Blog</h1>
         <ul>
             <li><a href="#">About Me</a></li>
