project 2.2 adds document navigaton and a footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="project1.html">Project 1 - Anna</a><br>
     <a href="project1.1.html">Project 1.1 - My Profile</a><br>
     <a href="project2.html">Project 2 - Jeff's Blog</a><br>
+    <a href="project2.1.html">Project 2.1 - Brian's Blog, adds working document navigation and footer</a>
 </body>
 
 </html>
