--- a/project3.html
+++ b/project3.html
@@ -13,14 +13,24 @@
             max-width: 600px;
         }
 
-        p {
-            background-color: rgba(0, 0, 0, 1);
-            color: rgba(255, 255, 255, 1);
-        }
-
         div {
             height: 200px;
             background-size: cover;
+            position: relative;
+            margin: 40px 0 0 0;
+            border-radius: 12px;
+        }
+
+        p {
+            background-color: rgba(0, 0, 0, 1);
+            color: rgba(255, 255, 255, 1);
+            padding: 10px;
+            text-align: justify;
+            line-height: 28px;
+            position: absolute;
+            bottom: 0;
+            margin: 0;
+
         }
 
         .first {
@@ -41,20 +51,36 @@
     <h1>esha's restaurant</h1>
 
     <div class="first">
-        <h2>welsh onion soko $14</h2>
-        <p>Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring
-            onion
-            summer purslane asparagus lentil. </p>
+
+        <p>
+            welsh onion soko $14 <br />
+            <small>
+                Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut
+                spring
+                onion summer purslane asparagus lentil.
+            </small>
+        </p>
     </div>
     <div class="second">
-        <h2>pastrami boudin tongue $22</h2>
-        <p>Tri-tip capicola kielbasa salami brisket chicken rump strip steak drumstick. Meatloaf chuck boudin ribeye
-            pork
-            jowl. Andouille bacon jowl meatloaf pork loin prosciutto bresaola.</p>
+
+        <p>
+            pastrami boudin tongue $22 <br />
+            <small>
+                Tri-tip capicola kielbasa salami brisket chicken rump strip steak drumstick. Meatloaf chuck boudin
+                ribeye
+                pork
+                jowl. Andouille bacon jowl meatloaf pork loin prosciutto bresaola.
+            </small>
+        </p>
     </div>
     <div class="dessert">
-        <h2>fruitcake marzipan pudding dragee $8</h2>
-        <p>Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice cream candy canes.
+
+        <p>
+            fruitcake marzipan pudding dragee $8<br />
+            <small>
+                Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice cream candy
+                canes.
+            </small>
         </p>
     </div>
 </body>
