--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a href="project1.1.html">Project 1.1 - My Profile</a><br>
     <a href="project2.html">Project 2 - Jeff's Blog</a><br>
     <a href="project2.1.html">Project 2.1 - Brian's Blog, adds working document navigation and footer</a>
+    <a href="project3.html">Project 3 - esha's resturant</a>
+    <a href="project3.1.html">Project 3.1 - esha's restaurant, with gradients, transparency, & web fonts</a>
 </body>
 
 </html>
