--- a/project3.1.html
+++ b/project3.1.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>esha's restaurant</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
             margin: 0 auto;
             max-width: 600px;
+            background-color: #232323;
         }
 
         div {
@@ -22,7 +28,7 @@
         }
 
         p {
-            background-color: rgba(0, 0, 0, 1);
+            background-color: rgba(0, 0, 0, 0.5);
             color: rgba(255, 255, 255, 1);
             padding: 10px;
             line-height: 28px;
@@ -34,6 +40,20 @@
 
         .price {
             float: right;
+        }
+
+        h1 {
+            font-family: 'Londrina Shadow', cursive;
+            font-size: 75px;
+            text-align: center;
+            margin: 60px, 0, 0, 0;
+            color: #aaaaaa;
+        }
+
+        h2 {
+            text-align: center;
+            margin: 0, 0, 70px, 0;
+            color: #bbbbbb;
         }
 
         .first {
@@ -52,6 +72,7 @@
 
 <body>
     <h1>esha's restaurant</h1>
+    <h2>"A New York City Eatery"</h2>
     <div class="first">
         <p>welsh onion soko <span class="price">$14</span><br />
             <small>
