--- a/project3.1.html
+++ b/project3.1.html
@@ -67,6 +67,32 @@
         .dessert {
             background: url("/assets/dessertcourse.jpg");
         }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 50px;
+                margin-top: 20px;
+                line-height: 40px;
+            }
+
+            h2 {
+                font-size: 20px;
+                margin: 20px 0 30px 0;
+            }
+
+            div {
+                margin: 20px 12px 0 12px;
+            }
+
+            p {
+                font-size: 20px;
+                line-height: 24px;
+            }
+
+            small {
+                font-size: 16px;
+            }
+        }
     </style>
 </head>
 
