--- a/project3.1.html
+++ b/project3.1.html
@@ -13,10 +13,10 @@
 
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: helvetica, sans-serif;
             margin: 0 auto;
             max-width: 600px;
-            background-color: #232323;
+            background: #232323;
         }
 
         div {
@@ -27,48 +27,64 @@
             border-radius: 12px;
         }
 
+        h1 {
+            font-family: 'Londrina Shadow', cursive;
+            text-align: center;
+            font-size: 75px;
+            color: #aaaaaa;
+            margin: 60px 0 0 0;
+        }
+
+        h2 {
+            text-align: center;
+            color: #bbbbbb;
+            margin: 0px 0 70px 0;
+        }
+
         p {
-            background-color: rgba(0, 0, 0, 0.5);
             color: rgba(255, 255, 255, 1);
+            background: black;
+            background: linear-gradient(bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, .4));
+            background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, .4));
+            background: -moz-linear-gradient(bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, .4));
             padding: 10px;
             line-height: 28px;
+            text-align: justify;
             position: absolute;
             bottom: 0;
             margin: 0;
-            text-align: justify;
+            height: 30px;
+        }
+
+        small {
+            opacity: 0;
+        }
+
+        .show-description p {
+            height: 150px;
+        }
+
+        .show-description small {
+            opacity: 1;
+        }
+
+        .first {
+            background-image: url("http://dash.ga.co/assets/firstcourse.jpg");
+        }
+
+        .second {
+            background-image: url("http://dash.ga.co/assets/secondcourse.jpg");
+        }
+
+        .dessert {
+            background-image: url("http://dash.ga.co/assets/dessertcourse.jpg");
         }
 
         .price {
             float: right;
         }
 
-        h1 {
-            font-family: 'Londrina Shadow', cursive;
-            font-size: 75px;
-            text-align: center;
-            margin: 60px, 0, 0, 0;
-            color: #aaaaaa;
-        }
-
-        h2 {
-            text-align: center;
-            margin: 0, 0, 70px, 0;
-            color: #bbbbbb;
-        }
-
-        .first {
-            background: url("/assets/firstcourse.jpg");
-        }
-
-        .second {
-            background: url("assets/secondcourse.jpg");
-        }
-
-        .dessert {
-            background: url("/assets/dessertcourse.jpg");
-        }
-
-        @media (max-width: 600px) {
+        @media (max-width:500px) {
             h1 {
                 font-size: 50px;
                 margin-top: 20px;
@@ -77,7 +93,8 @@
 
             h2 {
                 font-size: 20px;
-                margin: 20px 0 30px 0;
+                margin-top: 20px;
+                margin-bottom: 30px;
             }
 
             div {
@@ -93,6 +110,7 @@
                 font-size: 16px;
             }
         }
+    </style>
     </style>
 </head>
 
