bool if, and snazy querySelector display

--- a/misc_file.html
+++ b/misc_file.html
@@ -14,6 +14,7 @@
 
 
     <main></main>
+    <main2></main2>
     <!--for the js querySelector for the MadLib story-->
 
 </body>
@@ -50,6 +51,18 @@ to live there too!`;
     } else {
         console.log("Sorry, that's incorrect");
     }
+
+
+    //-----------------------------------
+    // boolean, bool
+
+    if (false) {
+        a = 'The condition is true.'
+    } else {
+        a = 'The condition is false.'
+    }
+
+    document.querySelector('main2').innerHTML = `${a} because if statements always looks for 'true' if it's not specified by a different conditional statement.`;
 </script>
 
 </html>
