fixed pics. Moving toward portfolio index.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brian Cumalander | Portfolio</title>
+    <!--<link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+    -->
+    <style>
+        body {
+            font-family: helvetica, Arial;
+        }
+
+        h1 {
+            font-size: 70px;
+        }
+
+        img {
+            margin: 10px;
+            border: 7px solid white;
+            border-radius: 20px;
+        }
+
+        article {
+            width: 500px;
+            padding: 20px;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 36px;
+            }
+
+            li {
+                display: block;
+                padding: 5px;
+            }
+    </style>
 
 </head>
 
 <body>
-    <a href="project1.html">Project 1 - Anna</a><br>
-    <a href="project1.1.html">Project 1.1 - My Profile</a><br>
-    <a href="project2.html">Project 2 - Jeff's Blog</a><br>
-    <a href="project2.1.html">Project 2.1 - Brian's Blog, adds working document navigation and footer</a>
-    <a href="project3.html">Project 3 - esha's resturant</a>
-    <a href="project3.1.html">Project 3.1 - esha's restaurant, with gradients, transparency, & web fonts</a>
+    <div><a href="project1.html">Project 1 - Anna</a><br></div>
+    <div><a href="project1.1.html">Project 1.1 - My Profile</a><br></div>
+    <div><img src="assets/project2.png"><br><a href="project2.html">Project 2 - Jeff's Blog</a><br></div>
+    <div><a href="project2.1.html">Project 2.1 - Brian's Blog, adds working document navigation and footer</a><br></div>
+    <div><a href="project3.html">Project 3 - esha's resturant</a><br></div>
+    <div><img src="assets/project3.1.png"><br><a href="project3.1.html">Project 3.1 - esha's restaurant, with gradients,
+            transparency, & web fonts</a><br>
+    </div>
 </body>
 
 </html>
