--- a/project1.1.html
+++ b/project1.1.html
@@ -10,7 +10,7 @@
     <style>
         body {
             text-align: center;
-            background-image: url("/assets/anna-bg.png");
+            background-image: url("assets/anna-bg.png");
             background-size: cover;
             color: white;
             font-family: helvetica;
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    <img src="/assets/Brian.jpg">
+    <img src="assets/Brian.jpg">
     <p>Hi, I'm Brian. Let's connect, enter your email below.</p>
     <input type="email" placeholder="Your email"><input type="submit">
 </body>
