--- a/project2.1.html
+++ b/project2.1.html
@@ -13,7 +13,7 @@
 
         header {
             text-align: center;
-            background: url("/assets/jeff-bg.png");
+            background: url("assets/jeff-bg.png");
             background-size: cover;
             color: white;
         }
@@ -102,7 +102,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <header id="top">
-        <img src="/assets/jeff.png" alt="profile photo of Brian">
+        <img src="assets/jeff.png" alt="profile photo of Brian">
         <h1>Brian's Blog</h1>
         <ul>
             <li><a href=#about>About</a></li>
