--- a/project3.html
+++ b/project3.html
@@ -34,15 +34,15 @@
         }
 
         .first {
-            background: url(/assets/firstcourse.jpg);
+            background: url(assets/firstcourse.jpg);
         }
 
         .second {
-            background: url("assets/secondcourse.jpg");
+            background: url(assets/secondcourse.jpg);
         }
 
         .dessert {
-            background: url("/assets/dessertcourse.jpg");
+            background: url(assets/dessertcourse.jpg);
         }
     </style>
 </head>
