--- a/project1.html
+++ b/project1.html
@@ -5,7 +5,7 @@
     <style>
         body {
             text-align: center;
-            background: url("/assets/anna-bg.png");
+            background: url("assets/anna-bg.png");
             background-repeat: no-repeat;
             background-size: auto;
             background-size: cover;
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-    <img src="/assets/anna.png">
+    <img src="assets/anna.png">
     <p>Hi! I'm Anna, a NYC-based marketer. Say hello!</p>
     <input type="email" placeholder="Your email">
     <input type="submit">
